--- a/src/legal/purchase-agreement.mdx
+++ b/src/legal/purchase-agreement.mdx
@@ -1,18 +1,15 @@
 
-Certainly! Here's a **standard Purchase Policy** tailored for **online purchases of insurance policies**. This can be adapted for most insurance providers and can be modified depending on your local regulations, types of insurance (e.g., auto, health, life), and business model.
+import {TitleHeader} from './components'
 
----
+<TitleHeader title="Purchase Agreement" effectiveDate="2023-01-01" lastUpdated="2023-01-01" />
 
-# **Online Insurance Purchase Policy**
 
-**Effective Date:** [Insert Date]
-**Last Updated:** [Insert Date]
 
 ## 1. **Overview**
 
-This Purchase Policy governs the online purchase of insurance products offered by [Insurance Company Name] (“we”, “us”, or “our”) through our website and/or mobile application (collectively referred to as the “Platform”).
+This Purchase Policy governs the online purchase of insurance products offered by Protap (“we”, “us”, or “our”) through our website and/or mobile application (collectively referred to as the “Platform”).
 
-By purchasing any insurance policy via our Platform, you (“you” or “the customer”) agree to comply with and be bound by this Purchase Policy in addition to our **Terms of Service**, **Privacy Policy**, and applicable laws and regulations.
+By purchasing any insurance policy via our Platform, you (“you” or “the customer”) agree to comply with and be bound by this Purchase Policy in addition to our **Terms of Use**, **Privacy Policy**, and applicable laws and regulations.
 
 ---
 
@@ -52,7 +49,7 @@ Your policy will be activated only after:
 
 ## 4. **Payment Terms**
 
-* All premiums must be paid in full using the accepted online payment methods (e.g., credit/debit card, bank transfer, digital wallets).
+* All premiums must be paid in full using the accepted online payment methods (e.g., credit/debit card, bank transfer, digital wallets, and cryptocurrencies).
 * Premiums may be one-time or recurring, depending on the policy type.
 * A receipt and policy documentation will be sent electronically upon payment confirmation.
 
@@ -82,15 +79,13 @@ We reserve the right to amend this Purchase Policy at any time. Any updates will
 
 For any inquiries or issues related to your policy purchase, please contact our Customer Support team:
 
-* **Email:** [[support@example.com](mailto:support@example.com)]
-* **Phone:** [Insert Contact Number]
-* **Hours:** [Insert Business Hours and Time Zone]
+* **Email:** [[support@protap.ph](mailto:support@protap.ph)]
 
 ---
 
 ## 9. **Governing Law**
 
-This Purchase Policy shall be governed by and construed in accordance with the laws of [Insert Country/State], without regard to its conflict of law principles.
+This Purchase Policy shall be governed by and construed in accordance with the laws of The Republic of the Philippines, without regard to its conflict of law principles.
 
 ---
 
