--- a/src/legal/purchase-agreement.mdx
+++ b/src/legal/purchase-agreement.mdx
@@ -1,7 +1,7 @@
 
 import {TitleHeader} from './components'
 
-<TitleHeader title="Purchase Agreement" effectiveDate="2023-01-01" lastUpdated="2023-01-01" />
+<TitleHeader title="Purchase Agreement" effectiveDate="Oct 22, 2025" lastUpdated="Oct 22, 2025" />
 
 
 
