--- a/src/legal/privacy-policy.mdx
+++ b/src/legal/privacy-policy.mdx
@@ -2,7 +2,7 @@
 
 import {TitleHeader} from './components'
 
-<TitleHeader title="Privacy Policy" effectiveDate="2023-01-01" lastUpdated="2023-01-01" />
+<TitleHeader title="Privacy Policy" effectiveDate="Oct 22, 2025" lastUpdated="Oct 22, 2025" />
 
 
 
