--- a/src/legal/terms-of-use.mdx
+++ b/src/legal/terms-of-use.mdx
@@ -1,6 +1,9 @@
-import {TitleHeader} from './components'
+import {TitleHeader, Headline} from './components'
 
-<TitleHeader title="Terms of Use" effectiveDate="2023-01-01" lastUpdated="2023-01-01" />
+<TitleHeader title="Terms of Use" effectiveDate="Oct 22, 2025" lastUpdated="Oct 22, 2025" />
+
+<Headline />
+
 
 ## 1. **Account Registration**
 
