update:user-info

--- a/src/legal/purchase-agreement.mdx
+++ b/src/legal/purchase-agreement.mdx
@@ -9,7 +9,7 @@ import {TitleHeader} from './components'
 
 This Purchase Policy governs the online purchase of insurance products offered by Protap (“we”, “us”, or “our”) through our website and/or mobile application (collectively referred to as the “Platform”).
 
-By purchasing any insurance policy via our Platform, you (“you” or “the customer”) agree to comply with and be bound by this Purchase Policy in addition to our **Terms of Use**, **Privacy Policy**, and applicable laws and regulations.
+By purchasing any insurance policy via our Platform, you (“you” or “the customer”) agree to comply with and be bound by this Purchase Policy in addition to our Terms of Use, Privacy Policy, and applicable laws and regulations.
 
 ---
 
@@ -63,7 +63,8 @@ Upon successful purchase, your policy documents will be available for download o
 
 ## 6. **Cancellation and Refund Policy**
 
-* You may cancel the policy within the **free-look period** (typically 10–15 days, depending on your jurisdiction) from the date of policy issuance for a full refund, provided no claims have been made.
+* Full refunds are not guaranteed.
+* You may cancel the policy within the *free-look period* from the date of policy issuance for a partial refund, provided no claims have been made.
 * After the free-look period, cancellation terms vary by policy type. Partial refunds may apply if allowed under the terms of your policy.
 * Refunds will be processed using the original payment method within [7–14] business days.
 
@@ -79,7 +80,7 @@ We reserve the right to amend this Purchase Policy at any time. Any updates will
 
 For any inquiries or issues related to your policy purchase, please contact our Customer Support team:
 
-* **Email:** [[support@protap.ph](mailto:support@protap.ph)]
+* *Email:* [[support@protap.ph](mailto:support@protap.ph)]
 
 ---
 
@@ -89,4 +90,4 @@ This Purchase Policy shall be governed by and construed in accordance with the l
 
 ---
 
-Let me know if you want to tailor this to a specific **type of insurance** (e.g., life, auto, travel), a **jurisdiction**, or need a version with more legal rigor or regulatory references.
+Let me know if you want to tailor this to a specific *type of insurance* (e.g., life, auto, travel), a *jurisdiction*, or need a version with more legal rigor or regulatory references.
