update:user-profile-public-page

--- a/src/legal/privacy-policy.mdx
+++ b/src/legal/privacy-policy.mdx
@@ -59,6 +59,6 @@ We may update this Privacy Policy from time to time to reflect changes in our pr
 
 ## 10. **How to Contact Us**
 
-If you have any questions about this Privacy Policy or our data practices, please contact our Data Protection Officer at hq@bigticket.ph or by mail at: Office of the Data Protection Officer, 5B Crissant Plaza Bldg, Quezon City, 1119 Metro Manila, Philippines.
+If you have any questions about this Privacy Policy or our data practices, please contact our Data Protection Officer at support@protap.ph or by mail at: Office of the Data Protection Officer, 5B Crissant Plaza Bldg, Quezon City, 1119 Metro Manila, Philippines.
 
 * **Email:** [[support@protap.ph](mailto:support@protap.ph)]
