--- a/src/legal/terms-of-use.mdx
+++ b/src/legal/terms-of-use.mdx
@@ -7,7 +7,7 @@ import {TitleHeader, Headline} from './components'
 
 ## 1. **Account Registration**
 
-You may browse the Site without registering for an account. You will be required to register for an account to use certain features of the Site, such as reserving or purchasing a ticket. Your account username may not include the name of another person with the intent to impersonate that person, or be offensive, vulgar, or obscene. Your account username and password are personal to you. You will be responsible for the confidentiality and use of your username and password, and for all activities (including purchases) that are conducted through your account. You may not transfer or sell access to your account. We will not be liable for any harm related to disclosure of your username or password or the use by anyone else of your username or password. You may not use another user’s account without that user’s permission. You will immediately notify us in writing if you discover any unauthorized use of your account or other account-related security breach. We may require you to change your username and/or password if we believe your account is no longer secure, or if we receive a complaint that your username violates someone else’s rights. You will have no ownership in your account or your username. We may refuse registration, cancel an account, or deny access to the Site for any reason.
+You may browse the Site without registering for an account. You will be required to register for an account to use certain features of the Site, such as reserving or purchasing a subscription. Your account username may not include the name of another person with the intent to impersonate that person, or be offensive, vulgar, or obscene. Your account username and password are personal to you. You will be responsible for the confidentiality and use of your username and password, and for all activities (including purchases) that are conducted through your account. You may not transfer or sell access to your account. We will not be liable for any harm related to disclosure of your username or password or the use by anyone else of your username or password. You may not use another user’s account without that user’s permission. You will immediately notify us in writing if you discover any unauthorized use of your account or other account-related security breach. We may require you to change your username and/or password if we believe your account is no longer secure, or if we receive a complaint that your username violates someone else’s rights. You will have no ownership in your account or your username. We may refuse registration, cancel an account, or deny access to the Site for any reason.
 
 ---
 
